tablet, laptop, desktop versions

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
   </head>
   <body>
     <div class="main-bg">
